<resources>
  <string name="app_name" translatable="false">প্রাণিসেবা ভেট</string>
  <string name="enter_your_mobile_number">Enter your mobile number</string>
  <string name="next">Next</string>
  <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
  <string name="already_registered_login">Already registered? Login</string>
  <string name="submit">Submit</string>
  <string name="name">Name*</string>
  <string name="farmer_name">Farmer Name</string>
  <string name="mobile_number">Mobile Number*</string>
  <string name="email">Email</string>
  <string name="farm_name">Farm Name</string>
  <string name="farm_type">Farm Type</string>
  <string name="number_of_animal">Number of Animal</string>
  <string name="number_of_animals">Number Of Animals</string>
  <string name="address">Address*</string>
  <string name="title_activity_main2">MainActivity2</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="action_edit">Edit</string>
  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="farmer_s_information">Farmer\'s Information:</string>
  <string name="treatment_service">Treatment Service</string>
  <string name="treatment_form">Treatment Form</string>
  <string name="treatment_service_details">
    <![CDATA[
    <p>You can call the hotline number (09643207003) to get
    medical treatment for your animal through the customer service officer or by filling out the
    initial patient information form by yourself. Then you can make payment from your own bKash
    account with the counter number received on your mobile or by clicking on the link received.
    You can pay with the counter number from the personal number of any bKash agent. Our service
    price is Tk.200 per cow / buffalo, Tk.100 per goat / sheep; The service price for each batch of
    chicken, duck, turkey, quail etc. is Tk. 500, dog, cat, rabbit Tk.500 each, birds Tk.100 each
    and other animals Tk.500 each. You can also find out the information of the service from our
    Facebook or website.</p>
    ]]>
  </string>
  <string name="consultancy_service">Consultancy Service</string>
  <string name="consultancy_service_details">
    <![CDATA[
    <p>You can fill and submit the consultancy information
    form yourself from the service receiving form to take the consultancy service of your animal or
    you can fill and submit it through the customer service officer by calling hotline
    (09643207003).Then you can make payment from your bKash / Rocket / Cash or by clicking on the
    link received with the counter number received on your mobile. Or you can make payment with the
    counter number from the personal number of any bKash / rocket / cash agent. Our consultancy
    service prices are divided into two categories, one-time and yearly.</p>
    ]]>
  </string>
  <string name="registered_farm_service">Registered Farm Service</string>
  <string name="registered_farm_service_details">
    <![CDATA[
    <p>The country\'s first government-approved online veterinary hospital has launched a special service called
        \'Registered Farm Services\'. The service will specifically help a farmer to build a profitable farm through
        proper farm management. A farm needs Scientific Housing, Quality Rations, Breeding Decisions / Planning, Green
        Grass Production and Storage, Deworming & Vaccination Scheduling, Farm Daily Activities, Disease Prevention,
        Control and Treatment and Safe & Quality Production and Marketing of Products etc. You can ensure all these
        things through the Farm Registration Services. Proper management is the main directives of the implementation of
        the goals and objectives of the farm. Management is an art or technique that coordinates the farm resources,
        decisions, opportunities and time to make it profitable. We set up a farm mainly for better production.
        Production means milk, meat, eggs,reproduction, and wool. Farm registration to ensure that production!</p> <br>
    <p>Registration Benefits:</p> <br>
    <ol>
        <li>
            &#160;You will get a Vet doctor at your doorstep if needed.
        </li>
        <br>
        <li>
            &#160;Farm management under the supervision or collaboration by a specific veterinarian each of the month.
        </li>
        <br>
        <li>
            &#160;All kinds of planning and management related to the farm will be given from the beginning.
        </li>
        <br>
        <li>
            &#160;Easy solutions to prevent, treat and manage farm diseases.
        </li>
        <br>
        <li>
            &#160;You will get farm planning assistance or science based solutions of current farm.
        </li>
        <br>
        <li>
            &#160;You will be able to participate in different training sessions.
        </li>
        <br>
        <li>
            &#160;Specific specialist doctors (Dairy Consultant, Poultry Consultant, Nutritionist, Reproductive Health
            Specialist etc.) will talk to you every month and supervise the farm.
        </li>
        <br>
        <li>
            &#160;For farm management and registration you will get a free mobile app on receiving all farm services.
        </li>
        <br>
        <li>
            &#160;You will get ration formulation on the basis of types of animals (cows, goats, layers, cats, etc.), breed,
            age, or stage of animals (calf / kid, calf,milking, weak, sick etc.).
        </li>
        <br>
        <li>
            &#160;Get deworming and vaccination schedule at the beginning of the year or when needed.
        </li>
        <br>
        <li>
            &#160;Get clear advice on breeding planning and reproductive health for farms.
        </li>
        <br>
        <li>
            &#160;You will get guidelines and training on grass production / silage making and management.
        </li>
        <br>
        <li>
            &#160;You can gain consultation on farm hygiene and biosecurity management.
        </li>
        <br>
        <li>
            &#160;You can obtain guidance on smart farm management.
        </li>
    </ol>
    ]]>
  </string>
  <string name="mobile_number_">Mobile Number:</string>
  <string name="name_of_farmer_">Name of Farmer:</string>
  <string name="name_of_farm_">Name of Farm:</string>
  <string name="address_">Address:</string>
  <string name="email_">Email:</string>
  <string name="farm_s_information">Farm\'s Information</string>
  <string name="type_of_farm_">Type of Farm:</string>
  <string name="number_of_animal_">Number of Animal:</string>
  <string name="address_of_farm_">Address of Farm:</string>
  <string name="farm_and_farmer_s_information">Farm and Farmer\'s Information</string>
  <string name="edit_farm_and_farmer_s_information">Edit Farm and Farmer\'s Information</string>
  <string name="service_related_information">Service Related Information</string>
  <string name="service_receiving_form">Service Receiving Form</string>
  <string name="one_time_service">One Time Service</string>
  <string name="payment_form">Payment Form</string>
  <string name="farm_registration">Farm Registration</string>
  <string name="monthly_service_registration">Monthly Service Registration</string>
  <string name="registered_farm_related_information">Registered Farm Related Information</string>
  <string name="monthly_service_related_information">Monthly Service Related Information</string>
  <string name="agent_registration">Agent Registration</string>
  <string name="farm_management_information">Farm Management Information</string>
  <string name="weight_measurement">Weight Measurement</string>
  <string name="hotline_number">Hotline Number</string>
  <string name="treatment">Treatment</string>
  <string name="consultancy">Consultancy</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="has_this_animal_been_treated_before_at_ps_vet">Has this animal been treated before
    at pS Vet?*</string>
  <string name="previous_prescription_number">Previous prescription number</string>
  <string name="animal_name_or_id_number">Animal name or ID number</string>
  <string name="select_animal_group">Select animal group*</string>
  <string name="animal_group">Animal group*</string>
  <string name="select_animal_type">Select animal type*</string>
  <string name="animal_type">Animal type*</string>
  <string name="select_animal_breed">Select animal breed</string>
  <string name="animal_breed">Animal breed</string>
  <string name="select_breed_type">Select breed type</string>
  <string name="breed_type">Breed type</string>
  <string name="select_animal_gender">Select animal gender</string>
  <string name="animal_gender">Animal gender*</string>
  <string name="stage_of_male">Stage of male*</string>
  <string name="stage_of_female">Stage of female*</string>
  <string name="is_this_animal_part_of_ps_iot_network">Is this animal part of pS IoT network?*</string>
  <string name="bolus_id">Bolus ID</string>
  <string name="age_of_the_animal">Age of the animal*</string>
  <string name="unit">Unit*</string>
  <string name="weight_of_the_animal_in_kg">Weight of the animal in KG*</string>
  <string name="select_deworming_status_within_the_last">Select deworming status within the last*</string>
  <string name="deworming_status_within_the_last">Deworming status within the last*</string>
  <string name="select_vaccination_status_within_the_last">Select vaccination status within the last*</string>
  <string name="vaccination_status_within_the_last">Vaccination status within the last*</string>
  <string name="type_of_vaccines">Type of vaccines</string>
  <string name="select_the_level_of_temperature">Select the level of temperature*</string>
  <string name="level_of_temperature">Level of temperature*</string>
  <string name="the_level_of_temperature">The level of temperature*</string>
  <string name="temperature_f">Temperature (F)</string>
  <string name="select_the_feed_water_intake_status"><![CDATA[Select the feed & water intake status*]]></string>
  <string name="feed_water_intake_status"><![CDATA[Feed & water intake status*]]></string>
  <string name="select_the_defecation_status">Select the defecation status*</string>
  <string name="defecation_status">Defecation status*</string>
  <string name="select_the_urination_status">Select the urination status</string>
  <string name="urination_status">Urination status</string>
  <string name="hair_of_the_animal_s_body_status">Hair of the animal\'s body status</string>
  <string name="salivation_status">Salivation status</string>
  <string name="animal_static_posture_status">Animal static posture status*</string>
  <string name="muzzle_status">Muzzle status</string>
  <string name="sneezing_coughing_status"><![CDATA[Sneezing & coughing status]]></string>
  <string name="sweating_status">Sweating status</string>
  <string name="posture_and_gesture_status">Posture and gesture status*</string>
  <string name="is_the_illness_happening_for_the_first_time">Is the illness happening for the first time?*</string>
  <string name="was_treatment_sought_elsewhere">Was treatment sought elsewhere?</string>
  <string name="problem_description_in_100_words">Problem description (In 100 words)*</string>
  <string name="are_any_other_animals_affected_by_the_same_disease">Are any other animals affected
    by the same disease?*</string>
  <string name="type_of_emergency">Type of emergency*</string>
</resources>